Fix navigation on mobile view

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -576,7 +576,7 @@ section
     font-weight: bold
 
   li + li
-    margin-left: 0
+    margin-left: 8px
 
 
 #docs
